# DJANGO-TEST

./: .env  .gitignore  .pylintrc  .ruff.toml  README.md  db.sqlite3  pyproject.toml
burgers/: admin.py  models.py  views.py
config/: settings.py  urls.py  views.py
pyburger/burgers/: admin.py  models.py
pyburger/burgers/migrations/: 0001_initial.py
pyburger/config/: settings.py  views.py
pyburger/templates/: burger_list.html  main.html
pylog/: README.md  db.sqlite3  pyproject.toml
pylog/blog/: admin.py  models.py  views.py
pylog/blog/migrations/: 0001_initial.py  0002_post_thumbnail.py
pylog/config/: settings.py  urls.py  views.py
pylog/templates/: index.html  post_detail.html  post_list.html
templates/: burger_list.html  burger_search.html
