[tool.poetry]
name = "pylog"
version = "0.1.0"
description = ""
authors = ["justk <justkukaro@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.7"
pylint = "^3.3.6"
pylint-django = "^2.6.1"
autopep8 = "^2.3.2"
flake8 = "^7.1.2"
black = "^25.1.0"
ruff = "^0.11.2"
pylance = "^0.25.1"
pillow = "^11.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
